# lolka

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ClickWeave/: CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  build.bat  build.sh
ClickWeave-Py/: README.md  build.py  main.py  pyinstaller.spec  requirements.txt
ClickWeave-Py/app/: __init__.py
ClickWeave-Py/app/core/: __init__.py  application.py  click_engine.py  hotkey_manager.py  macro_engine.py  pixel_watcher.py  scheduler.py
ClickWeave-Py/app/models/: __init__.py  models.py
ClickWeave-Py/app/ui/: main_window.py
ClickWeave-Py/app/ui/widgets/: profile_grid.py  status_bar.py  toolbar.py
ClickWeave-Py/app/ui/windows/: profile_editor.py  settings_window.py
ClickWeave-Py/tests/: __init__.py  test_models.py  test_timing.py
ClickWeave/profiles/: demo_form_test.json  demo_pixel_trigger.json
ClickWeave/src/: main.cpp
ClickWeave/src/core/: ClickEngine.cpp  ClickEngine.h  MacroStep.cpp  MacroStep.h  Profile.cpp  Profile.h
ClickWeave/src/platform/: HotkeyManager.h  WindowBinder.h
ClickWeave/src/platform/linux/: LinuxClickEngine.cpp  LinuxClickEngine.h
ClickWeave/src/platform/windows/: WindowsClickEngine.cpp  WindowsClickEngine.h  WindowsHotkeyManager.h
ClickWeave/src/ui/: ApplicationController.h  MacroStepListModel.h  ProfileListModel.cpp  ProfileListModel.h
ClickWeave/ui/qml/: main.qml
ClickWeave/ui/qml/components/: Card.qml  StatusChip.qml
ClickWeave/ui/qml/views/: HomeView.qml
public/: robots.txt
react-website/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
react-website/src/: App.tsx  index.css  routes.tsx
react-website/src/components/layout/: Footer.tsx  Navbar.tsx
react-website/src/components/ui/: Badge.tsx  Button.tsx  FeatureCard.tsx  PageSuspense.tsx  PricingCard.tsx  SectionHeader.tsx  ThemeSwitch.tsx
react-website/src/hooks/: useTheme.tsx
react-website/src/layouts/: RootLayout.tsx
react-website/src/lib/: utils.ts
react-website/src/pages/: BlogPage.tsx  BlogPostPage.tsx  ContactPage.tsx  FeaturesPage.tsx  HomePage.tsx  NotFoundPage.tsx  PricingPage.tsx  ShowcasePage.tsx
src/: App.jsx  index.css
src/components/: Badge.jsx  Button.jsx  FeatureCard.jsx  Footer.jsx  LoadingSpinner.jsx  Navbar.jsx  PricingCard.jsx  RootLayout.jsx  SectionHeader.jsx  ThemeSwitch.jsx
src/hooks/: useTheme.jsx
src/pages/: Blog.jsx  BlogPost.jsx  Contact.jsx  Features.jsx  Home.jsx  NotFound.jsx  Pricing.jsx  Showcase.jsx
